# HonorAI

./: .gitignore  .replit  README.md  app.py  chatbot.py  database.py  document_processor.py  legal_ner.py  pyproject.toml  utils.py  vector_store.py
